codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 297
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:

  ∴ ecodex (v<VERSION>)  ·  turtles all the way down
     loading

  Pull up a prompt.
  Resuming session…

› draft while loading


after:

  ∴ ecodex (v<VERSION>)  ·  turtles all the way down
     loading

  Pull up a prompt.


› draft while loading


---
fork lookup fallback:
before:

  ∴ ecodex (v<VERSION>)  ·  turtles all the way down
     loading

  Pull up a prompt.
  Forking session…

› draft while loading


after:

  ∴ ecodex (v<VERSION>)  ·  turtles all the way down
     loading

  Pull up a prompt.


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:

  ∴ ecodex (v<VERSION>)  ·  turtles all the way down
     loading

  Pull up a prompt.


› Ask Codex to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:

  ∴ ecodex (v<VERSION>)  ·  turtles all the way down
     loading

  Pull up a prompt.


› Ask Codex to do anything

  ? for shortcuts
